Version 0.46 - 24 Jan 2010 - greg@censoft.com
	* revised Makefile to allow compiling without X11 installed
	* created internal X11 directory for X11 hdrs if not present
	* added test directory with X11 test applications
	* revised Xlcint.h removed varargs.h, added stdargs.h
30 November 2007
	* ported FLTK 2.0.x (stubbed _XUnknownNativeEvent,XutfLookupString)
23 November 2007
	* change XPutImage to use new MWPF_HWPIXELVAL pixtype
	* force UseBackground true in XPutImage
	* change XFillArc/XFillArcs to add one to width/height
	* added X11_FONT_DIR3 to Makefile for X11 default TTF directory
	* added scalable font & height handling to XLoadFont with X11 fonts.dir
	* added input window handling to XCreateWindow (Giosis/Foedrowitz)
	* added BIGENDIAN option to Makefile
	* fix XCreateBitmapFromData for big endian (Giosis/Foedrowitz)
	* fix XDrawPoints past first coord (Giosis/Foedrowitz)
	* fix memory leak in XSetClipMask and XSetClipRectangles
	* rewrite XChangeProperty, never worked, implement XGetWindowProperty
	* fix XInternAtom to return above XA_LAST_PREDEFINED
14 June 2005
	* add XSetSelectionOwner,XGetSelectionOwner,XConvertSelection (Jordan)
Version 0.45 - 11 Sep 2003 - greg@censoft.com
	* added XAllocWMHints, XAllocSizeHints for FLTK 1.1.4
	* fixed 'p' entry in mwscan_to_mwkey
	* added X headers to nxlib distribution, X11 now not required to build
	* added Jordan's mods for better GTK (1.2.10) compatibility:
		XwcTextListToProperty, XwcPropertyToTextList, XWcFreeTextList
		fixed XPutImage w/src_x not 0 or unequal widths
		stubbed out XCreateFontSet
		added XGetSelectionOwner, XSetSelectionOwner, XConvertCase
	* temp kluged problem with X11 width/height vs NX radius for arc specs
	* fixed XDrawRectangle, XDrawArc width/height +1 bug
	* fixed angle1/angle2 difference between X11 and Nano-X in XDraw/FillArc
Version 0.44 - 1 June 2003 - greg@censoft.com
	* fixed GrGetColorByName return value
	* added XMapSubwindows for xpilot
	* added XKeycodeToKeysym