@@ -1,5 +1,5 @@
 NXLIB build and installation instructions
-Version 0.46, January 24, 20107
+Version 0.46, February 21, 2010
 
 1. Modify Makefile to set Microwindows and X11 include and lib directories
 	MWIN_INCLUDE=/pathto/microwin/src/include
@@ -8,7 +8,7 @@ Version 0.46, January 24, 20107
 	or, if X11 not installed on cross-compiling host, use nxlib's X11 headers
 	X11_INCLUDE=.
 
-	Microwindows v0.90 or later must be used.
+	Microwindows v0.92 or later should be used.
 
 2. Modify Makefile to set X11 PCF and Truetype font search directories
 	X11_FONT_DIR1=/usr/share/X11/fonts/100dpi
@@ -17,7 +17,8 @@ Version 0.46, January 24, 20107
 
 	More fonts directories can be added in font.c
 
-3. Modify Makefile to set rgb.txt file location
+3. Modify Makefile to set X11 fonts and dir and rgb.txt file location
+	X11_FONTS=/usr/share/fonts/X11
 	X11_RGBTXT=/usr/share/X11/rgb.txt
 
 4. Modify Makefile to enable NXLIB shared library and version if desired
@@ -35,9 +36,9 @@ Version 0.46, January 24, 20107
 	If DEBUG = -g, a larger library will be built with debug information.
 	If INCLUDE_XRM=Y, unmodified Xrm database routines will be included.
 
-6. Modify X11 application link lines to use -lNX11.  Otherwise you
-	will have to install NXLIB has libX11.so.  Change LIBNAME=X11 above,
-	and then set INSTALL_DIR=<path to X11 libraries>.
+6. Modify X11 application link lines to use '-lNX11 -lnano-X'.
+	Otherwise you will have to install NXLIB as libX11.so.
+	Change LIBNAME=X11 above, and then set INSTALL_DIR=<path to X11 libraries>.
 	DO NOT "make install" UNTIL YOU BACK UP THE FOLLOWING LIBRARIES.
 	NOTE "make install" WILL BY DEFAULT OVERWRITE THE FOLLOWING FILES:
 
