@@ -8,7 +8,7 @@ This software has been used to run the following libraries
 and applications, although much work is yet to be completed:
 
 fltk-1.0.11
-fltk-1.1.3
+fltk-1.1.10
 gtk+-1.2.7, glib-1.2.7
 gtk+-1.2.10, glib-1.2.10
 gtk+-2.0.6, glib-2.0.6, atk-1.0.3, pango-1.0.4
