@@ -1,0 +1,2 @@
+! fonts.alias file
+fixed      6x13
